fix overflow in shopping cart

--- a/src/views/ShoppingCart/ShoppingCart.vue.less
+++ b/src/views/ShoppingCart/ShoppingCart.vue.less
@@ -1,5 +1,6 @@
 .shoppingcart {
     width: 100%;
+    overflow-x: hidden;
 
     i {
         color: #cb423c;
